# Multithreaded-Neural-Network

./: .gitignore  CMakeLists.txt  README.md  dev-README.md  main.cpp
src/: CMakeLists.txt  activation.cpp  activation.h  base_layer.h  data_parser.cpp  data_parser.h  function.cpp  function.h  layer.cpp  layer.h  layer_cache.cpp  layer_cache.h  loss_function.cpp  loss_function.h  main.cpp  optimizer.cpp  optimizer.h  perceptron.cpp  perceptron.h  perceptron_data.cpp  perceptron_data.h  sequential_nn.cpp  sequential_nn.h  tests.cpp  transformation.cpp  transformation.h
src/sequential_nn.dSYM/Contents/: Info.plist
src/sequential_nn.dSYM/Contents/Resources/DWARF/: sequential_nn
tests/: CMakeLists.txt  a.out  test_activation.cpp  test_data_parser.cpp  test_function.cpp  test_layer.cpp  test_layer_cache.cpp  test_loss_function.cpp  test_optimizer.cpp  test_sequential_nn.cpp  test_transformation.cpp  tests.cpp  tests_sequential_nn.cpp  train.csv
